chore(houses): finish crud of houses
