# docs/swagger.yaml
@@ -1,4 +1,19 @@
 definitions:
+  entities.House:
+    properties:
+      created_at:
+        type: string
+      current_lord:
+        type: string
+      foundation_year:
+        type: string
+      name:
+        type: string
+      region:
+        type: string
+      updated_at:
+        type: string
+    type: object
   entities.HouseRequest:
     properties:
       current_lord:
@@ -31,6 +46,30 @@ info:
   contact: {}
 paths:
   /houses:
+    get:
+      consumes:
+      - application/json
+      description: Find houses
+      parameters:
+      - description: name house
+        in: query
+        name: name
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/entities.House'
+            type: array
+        "500":
+          description: Internal Server Error
+      security:
+      - ApiKeyAuth: []
+      tags:
+      - house
     post:
       consumes:
       - application/json
@@ -38,7 +77,7 @@ paths:
       parameters:
       - description: create new house
         in: body
-        name: user
+        name: house
         required: true
         schema:
           $ref: '#/definitions/entities.HouseRequest'
@@ -60,5 +99,95 @@ paths:
       security:
       - ApiKeyAuth: []
       tags:
-      - user
+      - house
+  /houses/:id:
+    delete:
+      consumes:
+      - application/json
+      description: Delete house
+      parameters:
+      - description: House ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: create new house
+        in: body
+        name: house
+        required: true
+        schema:
+          $ref: '#/definitions/entities.HouseRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entities.House'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/entities.HttpErr'
+        "500":
+          description: Internal Server Error
+      security:
+      - ApiKeyAuth: []
+      tags:
+      - house
+    get:
+      consumes:
+      - application/json
+      description: find house by id
+      parameters:
+      - description: House ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entities.House'
+        "500":
+          description: Internal Server Error
+      security:
+      - ApiKeyAuth: []
+      tags:
+      - house
+    put:
+      consumes:
+      - application/json
+      description: Update house
+      parameters:
+      - description: House ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: create new house
+        in: body
+        name: house
+        required: true
+        schema:
+          $ref: '#/definitions/entities.HouseRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entities.House'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/entities.HttpErr'
+        "500":
+          description: Internal Server Error
+      security:
+      - ApiKeyAuth: []
+      tags:
+      - house
 swagger: "2.0"
